--- a/views/decoPage.ejs
+++ b/views/decoPage.ejs
@@ -41,7 +41,7 @@
     <h3><strong>Decoration</strong></h3>
     <br> <br>
     <% deco.forEach((produit) => { %>
-      <a href="/maison/<%= produit.id %>">
+      <a href="/decoPage/<%= produit.id %>">
 
       <div class="carte">
         <div class="card-top">
