--- a/views/enfant.ejs
+++ b/views/enfant.ejs
@@ -40,6 +40,8 @@
     <h3><strong>Enfants</strong></h3>
     <br> <br>
     <% enfant.forEach((produit) => { %>
+      <a href="/enfant/<%= produit.id %>">
+
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -51,7 +53,7 @@
       <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
       </div>
       </div>
-
+      </a>
 
       <% }); %>
 
