--- a/views/fours.ejs
+++ b/views/fours.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Fours</strong></h3>
     <br> <br>
     <% fours.forEach((produit) => { %>
-      <a href="/electro/<%= produit.id %>">
+      <a href="/fours/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
