--- a/views/frigideres.ejs
+++ b/views/frigideres.ejs
@@ -43,7 +43,7 @@
     <h3><strong>frigideres</strong></h3>
     <br> <br>
     <% frigideres.forEach((produit) => { %>
-      <a href="/electro/<%= produit.id %>">
+      <a href="/frigideres/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
