--- a/views/grillesPains.ejs
+++ b/views/grillesPains.ejs
@@ -43,7 +43,7 @@
     <h3><strong>Grille-pain</strong></h3>
     <br> <br>
     <% grillesPains.forEach((produit) => { %>
-      <a href="/electro/<%= produit.id %>">
+      <a href="/grillesPains/<%= produit.id %>">
 
       <div class="carte">
         <div class="card-top">
