--- a/views/meublePage.ejs
+++ b/views/meublePage.ejs
@@ -43,8 +43,8 @@
     <h3><strong>Meubles</strong></h3>
     <br> <br>
     
-    <% meubleP.forEach((produit) => { %>
-      <a href="/maison/<%= produit.id %>">
+    <% meuble.forEach((produit) => { %>
+      <a href="/meublePage/<%= produit.id %>">
 
       <div class="carte">
         <div class="card-top">
