--- a/views/cusinieres.ejs
+++ b/views/cusinieres.ejs
@@ -42,7 +42,9 @@
     <br> <br>
     <h3><strong>Cusinieres</strong></h3>
     <br> <br>
-    <% cusiniere.forEach((produit) => { %>
+    <% cusinieres.forEach((produit) => { %>
+      <a href="/cusinieres/<%= produit.id %>">
+
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -55,7 +57,7 @@
       </div>
       </div>
 
-
+      </a>
       <% }); %>
    <br>
 
