--- a/views/mixeurs.ejs
+++ b/views/mixeurs.ejs
@@ -43,8 +43,7 @@
     <h3><strong>Mixeurs</strong></h3>
     <br> <br>
     <% mixeurs.forEach((produit) => { %>
-      <a href="/electro/<%= produit.id %>">
-
+      <a href="/mixeurs/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
