--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
   <!-- awesome cdn  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -44,14 +49,14 @@
 
   <br> <br> <br> <br>
   <!-- mon slider  telephones -->
-  <%- include('composants/slider-telephones.ejs') %> 
+  <%- include('composants/slider-telephones.ejs') %>
   <br>
   <!-- mon slider telephones -->
-    <!-- deux carte -->
-    <%- include('composants/deux-card.ejs') %> 
-    <br>
+  <!-- deux carte -->
+  <%- include('composants/deux-card.ejs') %>
+  <br>
 
-    <!-- deux carte -->
+  <!-- deux carte -->
 
   <!-- cool card -->
   <%- include('composants/cool-card.ejs') %>
@@ -64,7 +69,7 @@
   <!-- grosse cart -->
   <br>
   <!-- mode slider  -->
-  <%- include('composants/slider-mode.ejs') %> <br> 
+  <%- include('composants/slider-mode.ejs') %> <br>
 
   <!-- mode slider -->
   <br>
