--- a/views/iphonePage.ejs
+++ b/views/iphonePage.ejs
@@ -9,6 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
   <!-- awesome cdn  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -43,7 +48,7 @@
     <h3><strong>Iphones</strong></h3>
     <br> <br>
     <% iphone.forEach((produit) => { %>
-      <a href="/iphone/<%= produit.id %>">
+    <a href="/iphone/<%= produit.id %>">
       <div class="carte" data-product-id="iphone_<%= produit.id %>">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
@@ -58,9 +63,9 @@
     </a>
 
 
-      <% }); %>
+    <% }); %>
 
-   <br>
+    <br>
 
 
   </div>
