--- a/views/grillesPains.ejs
+++ b/views/grillesPains.ejs
@@ -12,6 +12,11 @@
   <!-- awesome cdn  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
   <!-- box icon here  -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -43,23 +48,23 @@
     <h3><strong>Grille-pain</strong></h3>
     <br> <br>
     <% grillesPains.forEach((produit) => { %>
-      <a href="/grillesPains/<%= produit.id %>">
+    <a href="/grillesPains/<%= produit.id %>">
 
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
-      </div>
-      <div class="card-details">
-      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
-      <span style="color: grey;"><%= produit.info %></span></p>
-      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
-      </div>
+        </div>
+        <div class="card-details">
+          <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+          <span style="color: grey;"><%= produit.info %></span></p>
+          <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+          <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+        </div>
       </div>
 
-      </a>
-      <% }); %>
-   <br>
+    </a>
+    <% }); %>
+    <br>
 
 
   </div>
