--- a/views/samsungPage.ejs
+++ b/views/samsungPage.ejs
@@ -18,6 +18,10 @@
   <!-- boostrap here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <!-- mon css here -->
   <link rel="stylesheet" href="/css/produit-list.css">
@@ -42,27 +46,27 @@
     <br> <br>
     <h3><strong>Samsung</strong></h3>
     <br> <br>
-    
+
     <% samsung.forEach((produit) => { %>
-      <a href="/samsung/<%= produit.id %>">
+    <a href="/samsung/<%= produit.id %>">
       <div class="carte">
         <div class="card-top">
           <img src="<%= produit.url %>" width="100">
+        </div>
+        <div class="card-details">
+          <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+          <span style="color: grey;"><%= produit.info %></span></p>
+          <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+          <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+        </div>
       </div>
-      <div class="card-details">
-      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
-      <span style="color: grey;"><%= produit.info %></span></p>
-      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
-      </div>
-      </div>
-      </a>
+    </a>
 
 
-      <% }); %>
+    <% }); %>
 
 
-   <br>
+    <br>
 
 
   </div>
