--- a/views/Detail.ejs
+++ b/views/Detail.ejs
@@ -55,15 +55,14 @@
 
 
   <!-- boostrap here -->
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-  <script src="/script/detail.js"></script>
 
   <!-- Inclure la bibliothèque UUID depuis le CDN -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script> -->
 
+  <script src="/script/index.js"></script>
 
+  <!-- Script d'ajout au panier -->
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       // Attendre que la bibliothèque UUID soit chargée
@@ -128,6 +127,7 @@
         // Afficher un message ou effectuer d'autres actions si nécessaire
         alert('Ajouté au panier');
         location.reload();
+
       }
 
       // Fonction pour mettre à jour le contenu du panier
@@ -138,7 +138,6 @@
         // Récupérer le panier depuis le localStorage
         const cart = JSON.parse(localStorage.getItem('lafyshop')) || [];
 
-
         // Sélectionner l'élément où vous souhaitez afficher les produits du panier
         const centerElement = panierElement.querySelector('.center');
         const footerTopElement = panierElement.querySelector('.footer-top');
@@ -146,53 +145,61 @@
         // Si le panier est vide, afficher un message approprié
         if (cart.length === 0) {
           centerElement.innerHTML = `
-                    <div class="panier-vide shadow-sm" onclick="accueil()">
-                        <h4>Votre panier est vide 🛒</h4> <br>
-                        <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
-                        <button>Voir les meilleures offres</button>
-                    </div>
-                `;
+            <div class="panier-vide shadow-sm" onclick="accueil()">
+                <h4>Votre panier est vide 🛒</h4> <br>
+                <p style="font-size: 0.7rem;">En manque d'inspiration ?</p>
+                <button>Voir les meilleures offres</button>
+            </div>
+        `;
           footerTopElement.innerHTML = '';
         } else {
           // Si le panier n'est pas vide, construire le HTML pour chaque produit
           const cartHTML = cart.map(product => `
-
-                <div class="produit-panier" style=" padding: 10px; display: flex; border: 1px solid rgba(128, 128, 128, 0.173); margin: 10px;">
-            <div class="img-box" style="width: 40%; ">
-                <img src="${product.url}" alt="${product.name}" width="70">
-            </div>
-            <div class="details-box" style="width: 60%;">
-                <p><strong>${product.name}</strong></p> 
-                <p>${product.info}</p> 
-                <i style="color: rgb(7, 192, 7);" class='bx bx-check-circle' ></i> <span>en stock</span>
-                <p>Quantite : ${product.quantity}</p>
-                <div style="display: flex; align-items: center; justify-content: space-between;">
-                    <p style="color: rgb(159, 9, 9);"><strong>${product.price} CFA</strong></p>
-                    <i style="font-size: 1.3rem;" class='bx bx-trash' onclick="removeFromCart('${product.Id}')" ></i>
+            <div class="produit-panier" style="padding: 10px; display: flex; border: 1px solid rgba(128, 128, 128, 0.173); margin: 10px;">
+                <div class="img-box" style="width: 40%;">
+                    <img src="${product.url}" alt="${product.name}" width="70">
+                </div>
+                <div class="details-box" style="width: 60%;">
+                    <p><strong>${product.name}</strong></p> 
+                    <p>${product.info}</p> 
+                    <i style="color: rgb(7, 192, 7);" class='bx bx-check-circle'></i> <span>en stock</span>
+                    <p>Quantité : ${product.quantity}</p>
+                    <div style="display: flex; align-items: center; justify-content: space-between;">
+                        <p style="color: rgb(159, 9, 9);"><strong>${product.price} CFA</strong></p>
+                        <i style="font-size: 1.3rem;" class='bx bx-trash' onclick="removeFromCart('${product.Id}')"></i>
+                    </div>
                 </div>
             </div>
-        </div>
-
-                `).join('');
+        `).join('');
 
           // Injecter le HTML dans l'élément du panier
-          centerElement.innerHTML = cartHTML
-          localStorage.setItem('point_rouge', 'on');
+          centerElement.innerHTML = cartHTML;
 
 
 
           // Mettre à jour le total et le nombre de produits
-          const total = cart.reduce((acc, product) => acc + parseFloat(product.price) * parseInt(product.quantity), 0);
-          const totalQuantity = cart.reduce((acc, product) => acc + parseInt(product.quantity), 0);
-          footerTopElement.innerHTML = `<span><strong>Total: ${total.toFixed(2)}0 CFA</strong></span> <span>Nombre: ${totalQuantity}</span>`;
+          const total = cart.reduce((acc, product) => {
+            // Supprimer les espaces du prix et convertir en nombre
+            const priceWithoutSpaces = parseFloat(product.price.replace(/\s/g, ''));
+            return acc + priceWithoutSpaces * parseInt(product.quantity);
+          }, 0);
 
+          const totalQuantity = cart.reduce((acc, product) => acc + parseInt(product.quantity), 0);
+
+          // Formater le total avec la fonction toLocaleString
+          const formattedTotal = total.toLocaleString('fr-FR', {
+            style: 'currency',
+            currency: 'XOF'
+          });
+
+          // ...
+
+          footerTopElement.innerHTML = `<span><strong>Total: ${formattedTotal}</strong></span> <span>Nombre: ${totalQuantity}</span>`;
         }
 
-        // Mettre à jour d'autres éléments du panier (total, nombre de produits, etc.) si nécessaire
-        // ...
-
-        // Vous pouvez également ajouter des événements ou des fonctionnalités supplémentaires ici
-
+        // point_rouge
+        localStorage.setItem('point_rouge', cart.length > 0 ? 'on' : 'off');
+        pointRouge();
       }
 
       function pointRouge() {
@@ -222,9 +229,9 @@
     }
   </script>
 
-  <script src="/script/index.js"></script>
 
 </body>
+
 
 
 </html>
