--- a/views/index.ejs
+++ b/views/index.ejs
@@ -132,7 +132,7 @@
 
     if (existingProduct) {
       // Si le produit existe, incrémente la quantité
-      return alert('Deja dans le panier')
+      return alert('Déjà dans le panier !')
     } else {
       // Sinon, ajoute le produit avec une quantité initiale de 1
       cart.push(product);
