--- a/views/composants/deux-card.ejs
+++ b/views/composants/deux-card.ejs
@@ -9,7 +9,7 @@
         <div class="prix">
             <span class="prix-actuel" style="color: #293847; font-weight: bolder; font-size: 0.9rem;"><%= produit.prix %> CFA</span>
         </div>
-        <button class="add-to-cart-btn">Ajouter</button>
+      <button class="add-to-cart-btn" data-product-id="<%= produit.id %>" data-product-nom="<%= produit.nom %>" data-product-prix="<%= produit.prix %>" data-product-url="<%= produit.url %>" data-product-info="<%= produit.info %>" onclick="addToCart(this)">Ajouter</button>
     </div>
     <% }); %>
 
