travail sur le desk vision

--- a/views/composants/nav.ejs
+++ b/views/composants/nav.ejs
@@ -15,7 +15,7 @@
         </div>
     </nav>
 
-    <form class="form">
+    <form class="form" id="search">
         <label for="search">
             <input required="" autocomplete="off" placeholder="Qu'est-ce qui vous ferait plaisir ? " id="search" type="text">
             <div class="icon">
