display none deux-card

--- a/views/composants/affiche-block.ejs
+++ b/views/composants/affiche-block.ejs
@@ -1,27 +1,32 @@
 <div class="affiche-block row">
   <div class="col-md-5 shadow-sm">
     <div style="display: flex;">
-        <i style="color: green;" class='bx bxs-certification'></i>
+      <i style="color: green;" class='bx bxs-certification'></i>
       <span> en stock</span> <br> <br> <br>
     </div>
     <h3>Améliorez votre <br> technologie</h3><br>
     <p style="color: grey;">Trouvez votre téléphone idéal <br>élégant et élégant ou économique</p>
-  <br> <br>
-  <button type="button" class="btn btn-primary">Afficher</button>
-
-</div>
+    <br> <br>
+    <a href="/" class="btn btn-primary">Afficher</a>
+  </div>
   <div class="col-md-3 watch shadow-sm">
+    <a href="#">
     <br>
     <p style="margin-left: 10px;">Montre connectée</p>
+    </a>
   </div>
   <div class="col-md-3">
-    <div class="top shadow-sm">
+    <a href="#">
+      <div class="top shadow-sm">
         <br> <br> <br> <br> <br> <br> <br> <br>
-      <p>Pc et accessoires</p>
-    </div>
-    <div class="bottom shadow-sm">
+        <p>Pc et accessoires</p>
+      </div>
+    </a>
+    <a href="#">
+      <div class="bottom shadow-sm">
         <br> <br> <br> <br><br> <br> <br> <br>
-      <p>Mode femme</p>
-    </div>
+        <p>Mode femme</p>
+      </div>
+    </a>
   </div>
 </div>
