--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
 
   <%- include('composants/nav.ejs') %>
   <%- include('composants/promo.ejs') %>
-  <div class="main">
+<div class="main">
   <%- include('composants/nav-desk.ejs') %>
   <%- include('composants/menu-list.ejs') %>
   <%- include('composants/affiche-block.ejs') %>
@@ -56,12 +56,22 @@
   <%- include('composants/slider-telephones.ejs') %>
   <br>
   <!-- mon slider telephones -->
+
+  <!-- multi card  -->
+  <%- include('composants/multi-card.ejs') %>
+
+  <!-- multi card  -->
+
   <!-- deux carte -->
   <%- include('composants/deux-card.ejs') %>
   <br>
 
   <!-- deux carte -->
 
+  <!-- cool card -->
+  <%- include('composants/pc-affiche.ejs') %>
+  <br>
+  <!-- cool card -->
   <!-- cool card -->
   <%- include('composants/cool-card.ejs') %>
   <br>
