list page adapter a vue de  ordinateur

--- a/views/chaussuresFPage.ejs
+++ b/views/chaussuresFPage.ejs
@@ -33,6 +33,9 @@
 
   <%- include('composants/nav.ejs') %>
 
+  <%- include('composants/nav-desk.ejs') %>
+  <%- include('composants/menu-list.ejs') %>
+
   <%- include('composants/burger-menu.ejs') %>
   <%- include('composants/panier.ejs') %>
 
