--- a/views/chaine.ejs
+++ b/views/chaine.ejs
@@ -31,7 +31,8 @@
 <body id="body">
 
   <%- include('composants/nav.ejs') %>
-
+  <%- include('composants/nav-desk.ejs') %>
+  <%- include('composants/menu-list.ejs') %>
   <%- include('composants/burger-menu.ejs') %>
   <%- include('composants/panier.ejs') %>
 
