--- a/views/iphonePage.ejs
+++ b/views/iphonePage.ejs
@@ -32,6 +32,9 @@
 <body id="body">
 
   <%- include('composants/nav.ejs') %>
+  <%- include('composants/nav-desk.ejs') %>
+  <%- include('composants/menu-list.ejs') %>
+
 
   <%- include('composants/burger-menu.ejs') %>
   <%- include('composants/panier.ejs') %>
