--- a/views/chaussetteFPage.ejs
+++ b/views/chaussetteFPage.ejs
@@ -28,11 +28,12 @@
 </head>
 
 <body id="body">
-
+  
   <%- include('composants/nav.ejs') %>
-
-    <%- include('composants/nav-desk.ejs') %>
-    <%- include('composants/menu-list.ejs') %>
+  
+  <%- include('composants/promo.ejs') %>
+  <%- include('composants/nav-desk.ejs') %>
+  <%- include('composants/menu-list.ejs') %>
 
   <%- include('composants/burger-menu.ejs') %>
   <%- include('composants/panier.ejs') %>
