--- a/views/Detail.ejs
+++ b/views/Detail.ejs
@@ -27,11 +27,13 @@
   <link rel="stylesheet" href="/css/produit-list.css">
   <link rel="stylesheet" href="/css/detail.css">
 
-  <head>details wiews</head>
-
 <body id="body">
 
   <%- include('composants/nav.ejs') %>
+  
+  <%- include('composants/promo.ejs') %>
+  <%- include('composants/nav-desk.ejs') %>
+  <%- include('composants/menu-list.ejs') %>
 
   <%- include('composants/burger-menu.ejs') %>
   <%- include('composants/panier.ejs') %>
