--- a/views/charbon.ejs
+++ b/views/charbon.ejs
@@ -30,6 +30,7 @@
 <body id="body">
 
   <%- include('composants/nav.ejs') %>
+  <%- include('composants/promo.ejs') %>
 
     <%- include('composants/nav-desk.ejs') %>
     <%- include('composants/menu-list.ejs') %>
