--- a/views/chicha.ejs
+++ b/views/chicha.ejs
@@ -31,6 +31,7 @@
 <body id="body">
 
   <%- include('composants/nav.ejs') %>
+  <%- include('composants/promo.ejs') %>
 
   <%- include('composants/burger-menu.ejs') %>
   <%- include('composants/panier.ejs') %>
