--- a/views/frigideres.ejs
+++ b/views/frigideres.ejs
@@ -31,6 +31,9 @@
 <body id="body">
 
   <%- include('composants/nav.ejs') %>
+    <%- include('composants/promo.ejs') %>
+
+  <%- include('composants/nav-desk.ejs') %>
 
   <%- include('composants/burger-menu.ejs') %>
   <%- include('composants/panier.ejs') %>
