--- a/views/hpPage.ejs
+++ b/views/hpPage.ejs
@@ -31,6 +31,8 @@
 <body id="body">
 
   <%- include('composants/nav.ejs') %>
+    <%- include('composants/promo.ejs') %>
+
     <%- include('composants/nav-desk.ejs') %>
     <%- include('composants/menu-list.ejs') %>
 
