--- a/views/iphonePage.ejs
+++ b/views/iphonePage.ejs
@@ -32,6 +32,8 @@
 <body id="body">
 
   <%- include('composants/nav.ejs') %>
+    <%- include('composants/promo.ejs') %>
+
   <%- include('composants/nav-desk.ejs') %>
   <%- include('composants/menu-list.ejs') %>
 
