--- a/views/meublePage.ejs
+++ b/views/meublePage.ejs
@@ -31,6 +31,7 @@
 <body id="body">
 
   <%- include('composants/nav.ejs') %>
+  <%- include('composants/promo.ejs') %>
 
     <%- include('composants/nav-desk.ejs') %>
     <%- include('composants/menu-list.ejs') %>
