--- a/views/composants/menu-list.ejs
+++ b/views/composants/menu-list.ejs
@@ -1,7 +1,7 @@
 <div class="menu-list">
   <div class="dropdown">
     <button class="btn btn-link dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      Telephones
+      Telephone
     </button>
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="/iphone">Iphone</a></li>
@@ -52,13 +52,13 @@
   </div>
   <div class="dropdown">
     <button class="btn btn-link dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      Bijoux & Montres
+      Bijou & Montre
     </button>
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="/chaine">Chaine</a></li>
       <li><a class="dropdown-item" href="/montreCo">Montre connecter</a></li>
       <li><a class="dropdown-item" href="/montre">Montre</a></li>
-      <li><a class="dropdown-item" href="/bagues">Bague</a></li>
+      <li><a class="dropdown-item" href="/bague">Bague</a></li>
     </ul>
   </div>
   <div class="dropdown">
@@ -96,8 +96,12 @@
     </ul>
   </div>
   <div class="dropdown">
-    <a class="btn btn-link" type="button" href="/beauter">
-      Beauter
-    </a>
+    <button class="btn btn-link dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+     Beauté
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="/beauter">Beauté</a></li>
+    </ul>
   </div>
+
 </div>
