--- a/views/composants/nav-desk.ejs
+++ b/views/composants/nav-desk.ejs
@@ -1,5 +1,5 @@
 <div class="nav-desk">
-  <h4 onclick="accueil()"><strong>LafyShop</strong></h4>
+  <h4 onclick="accueil()" style="cursor: pointer;"><strong>LafyShop</strong></h4>
   <input class="input" name="text" type="text" placeholder="Search the internet...">
 
   <label class="switch">
