--- a/views/composants/deux-card.ejs
+++ b/views/composants/deux-card.ejs
@@ -1,5 +1,5 @@
 <div class="deux-card-container">
-    <h3 style="text-align: start; margin-left: 10px;">Les offres du moments</h3>
+    <h3 style="text-align: start; margin-left: 10px;">Les offres du moments</h3> <br> <br> <br>
     <% moment.forEach((produit) => { %>
     <div class="carte">
         <img src="<%= produit.url %>" width="55px" alt="<%= produit.nom %>" >
