--- a/views/composants/nav-desk.ejs
+++ b/views/composants/nav-desk.ejs
@@ -1,6 +1,6 @@
 <div class="nav-desk">
   <h4 onclick="accueil()" style="cursor: pointer;"><strong>LafyShop</strong></h4>
-  <input class="input" name="text" type="text" placeholder="Search the internet...">
+  <input class="input" name="text" type="text" placeholder="Rechercher ici ....">
 
   <label class="switch">
     <input type="checkbox" id="darkModeToggle" onclick="toggleDarkMode()">
