--- a/views/composants/slider-telephones.ejs
+++ b/views/composants/slider-telephones.ejs
@@ -1,12 +1,12 @@
+<h3 style="text-align: start; margin-left: 10px;">telephones et accessoires</h3>
 <div class="slider-containerVisiter">
-    <h3 style="text-align: start; margin-left: 10px;">telephones et accessoires</h3>
     <div class="sliderVisiter">
       <% tel.forEach((produit) => { %>
       <div class="article-carte">
         <img src="<%= produit.url %>" alt="<%= produit.nom %>">
         <br>
         <p style="text-align: center; text-transform: uppercase;"> <strong> <%= produit.nom %> </strong> </p>
-          <span><%= produit.info %></span>
+          <span class="info"><%= produit.info %></span>
         <div class="prix">
           <span class="prix-actuel" style="color: #293847; font-weight: bolder; font-size: 1.2rem;"><%= produit.prix %> CFA</span>
         </div>
