--- a/public/css/produit-list.css
+++ b/public/css/produit-list.css
@@ -689,6 +689,30 @@ body .main {
      /* la promo ici  */
 
   /* les carte de produits ici  */
+
+     /* mon panier  */
+     .monPanier {
+       width: 0%;
+       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+       /* Ajustez les valeurs selon vos préférences */
+     }
+  
+     .monPanier .center {
+       padding: 10px;
+       max-height: calc(100vh - 100px);
+       /* Ajusté la hauteur maximale */
+       overflow-y: auto;
+       /* Défilement si nécessaire */
+       padding-bottom: 200px !important;
+  
+     }
+  
+     .monPanier .bx {
+       cursor: pointer;
+     }
+  
+  
+     /* mon panier  */
 }
 
 /* media query pour pc view  */
