--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1229,10 +1229,11 @@
     display: none;
   }
 
-  .multi-card{
+  .multi-card {
     display: none;
   }
-  .pc-affiche{
+
+  .pc-affiche {
     display: none;
   }
 
@@ -1395,6 +1396,7 @@
 
     .col-md-5 h3 {
       font-weight: bolder;
+      color: black;
     }
 
     .watch {
@@ -1434,12 +1436,14 @@
     .deux-card-container {
       display: none;
     }
-    .multi-card{
+
+    .multi-card {
       display: flex;
     }
+
     .pc-affiche {
       display: block;
-     }
+    }
 
     .multi-card .col-md-3 .article {
       display: flex;
@@ -1510,13 +1514,38 @@
       /* Couleur du texte pour le mode sombre */
     }
 
-    body.dark-mode .btn,h3 {
+    body.dark-mode .btn,
+    h3 {
       color: #fff;
     }
-    body.dark-mode .slider-containerVisiter{
+
+    body.dark-mode .slider-containerVisiter {
       color: black;
     }
 
     /* Dark mode  */
+
+    /* mon panier  */
+    .monPanier {
+      width: 0%;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      /* Ajustez les valeurs selon vos préférences */
+    }
+
+    .monPanier .center {
+      padding: 10px;
+      max-height: calc(100vh - 100px);
+      /* Ajusté la hauteur maximale */
+      overflow-y: auto;
+      /* Défilement si nécessaire */
+      padding-bottom: 200px !important;
+
+    }
+    .monPanier .bx{
+      cursor: pointer;
+    }
+
+
+    /* mon panier  */
 
   }
